ingress-nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - http:
      paths:
      - path: "/"
        backend:
          serviceName: frontend
          servicePort: 3000
      - path: "/items"
        backend:
          serviceName: app
          servicePort: 3000
